# inbody_bot

./: .gitignore  README.md  pyproject.toml
data/: inbody.csv  inbody_sample.csv
scripts/: train_model.py
src/bot/: bot.py
src/ml/: model.py
